<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="211dp"
            android:contentDescription="@string/picture"
            android:scaleType="centerCrop"
            android:src="@mipmap/picture" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="50dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/mainMargin">

                <ImageView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:src="@mipmap/sberbank" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/work"
                    android:layout_marginLeft="8dp"
                    android:textSize="@dimen/textSize"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/mainMargin">

                <ImageView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:src="@mipmap/mpei"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bachelor"
                    android:layout_marginLeft="8dp"
                    android:textSize="@dimen/textSize"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/mainMargin">

                <ImageView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:src="@mipmap/mtuci"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/magistracy"
                    android:layout_marginLeft="8dp"
                    android:textSize="@dimen/textSize"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/red"
                android:layout_marginTop="@dimen/mainMargin"
                android:layout_marginBottom="@dimen/mainMargin"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textSize="@dimen/textSize" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/red"
                android:layout_marginTop="@dimen/mainMargin"
                android:layout_marginBottom="@dimen/mainMargin"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint"
                android:textSize="@dimen/textSize"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button"
                android:layout_gravity="right"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom|center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@mipmap/instagram" />

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@mipmap/vk" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>